--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,8 +66,9 @@ dependencies:
   screenshot: ^3.0.0
   image_gallery_saver: ^2.0.3
   syncfusion_flutter_charts: ^26.2.5+1
-  go_router: ^14.2.1
-    
+  # go_router: ^14.2.2
+  # uni_links: ^0.5.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
