--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,10 +65,12 @@ dependencies:
   firebase_dynamic_links: ^6.0.3
   screenshot: ^3.0.0
   image_gallery_saver: ^2.0.3
-  syncfusion_flutter_charts: ^26.2.5+1
-  # go_router: ^14.2.2
+  # syncfusion_flutter_charts: ^25.1.45
+  fl_chart: ^0.68.0
+  go_router: ^14.2.2
   # uni_links: ^0.5.1
   url_launcher: ^6.3.0
+  # connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
