--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dependencies:
   go_router: ^14.2.2
   # uni_links: ^0.5.1
   url_launcher: ^6.3.0
-  # connectivity_plus: ^6.0.5
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
